# qldebugger

./: .editorconfig  .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: check-commit.yml  docs.yml  lint.yml  release-build.yml  release.yml  test.yml
docs/: cli.md  config.md  getting-started.md  index.md  install.md
docs/debuggers/: vscode.md
qldebugger/: aws.py  cli.py
qldebugger/actions/: __init__.py  event_source_mapping.py  infra.py  lambda_.py  message.py
qldebugger/config/: __init__.py  file_parser.py
qldebugger/example/: lambdas.py
scripts/: init-project.sh  setup-devcontainer.sh  update-tools-completion.sh
src/qldebugger/: aws.py  cli.py
src/qldebugger/actions/: __init__.py  infra.py  lambda_.py  message.py
src/qldebugger/config/: file_parser.py
tests/: utils.py
tests/qldebugger/: test_aws.py
tests/qldebugger/actions/: test_event_source_mapping.py  test_infra.py  test_lambda_.py  test_message.py
tests/qldebugger/config/: test_file_parser.py  test_init.py
tests/qldebugger/example/: test_lambdas.py
