[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qldebugger"
version = "0.2.0"
description = "Utility to debug AWS lambdas with SQS messages"
authors = ["Eduardo Klosowski <eduardo_klosowski@yahoo.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/eduardoklosowski/qldebugger"
documentation = "http://qldebugger.readthedocs.io/"
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Debuggers",
  "Topic :: System :: Emulators",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26"
click = "^8.1"
pydantic = "^1.10"
tomli = "^2.0"

[tool.poetry.group.type.dependencies]
aws-lambda-typing = "^2.17"
boto3-stubs = {version = "^1.26", extras = ["secretsmanager", "sns", "sqs", "sts"]}

[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10"
autopep8 = "^2.0"
ruff = "0.0.270"
mypy = "^1.3"
pytest = "^7.3"
pytest-cov = "^4.1"
pytest-xdist = "^3.3"
moto = {version = "^4.1", extras = ["server"]}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4"

[tool.poetry.scripts]
qldebugger = "qldebugger.cli:cli"

[tool.autopep8]
recursive = true
aggressive = 3

[tool.ruff]
target-version = "py38"
line-length = 119
select = ["ALL"]
ignore = ["D", "ANN101", "ANN102", "ANN401", "FBT", "EM", "ARG", "PLR0913", "TRY003"]

[tool.ruff.per-file-ignores]
"qldebugger/example/*.py" = ["T20"]
"tests/*.py" = ["S101", "S311", "PLR2004"]

[tool.ruff.pep8-naming]
classmethod-decorators = ["pydantic.validator"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.mypy]
follow_imports = "normal"
warn_unused_configs = true
show_column_numbers = true
show_error_codes = true
sqlite_cache = true
strict = true
plugins = ["pydantic.mypy"]
files = ["qldebugger/**/*.py", "tests/**/*.py"]

[tool.pytest.ini_options]
addopts = "--strict-config --cov-report=term-missing --no-cov-on-fail --cov=qldebugger"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if (typing\\.)?TYPE_CHECKING:",
  "@abstractmethod",
  "@overload",
]
